# freezer

./: .gitignore  Dockerfile  Dockerfile_first_tries  README.md  TODO.md  compose.yml  freezer_kill.ps1  freezer_restart_force.ps1  freezer_start.ps1  nginx.conf  pyproject.toml  requirements.txt  run_db_init.bat  rxconfig.py  web.Dockerfile
alembic/versions/: 9cad6e462d78_.py  f944d76fe629_add_more_content_table_fields.py
backend/: crud.py  database.py  main.py
doc/: schema.xlsx
freezer/: __init__.py  freezer.py  models.py  state.py  style.py
freezer/pages/: add.py  category_filter.py  content.py  index.py
