[project]
name = "freezer"
version = "0.1.0"
description = "Freezer content tracker."
authors = [
    { name = "Jorrit Vander Mynsbrugge", email = "44178217+jorritvm@users.noreply.github.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"