[project]
name = "freezer"
version = "0.1.0"
description = "Freezer content tracker."
authors = [
    { name = "Jorrit Vander Mynsbrugge", email = "44178217+jorritvm@users.noreply.github.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "reflex (>=0.7.2,<0.8.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"